2018-04-07  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* 42600: Src/Zle/computil.c: error paths for _values leaked
	the exclusion list array

	* 42597: Src/params.c: plug memory leak found by coverity

	* 42595: Src/utils.c: remove dead code flagged by coverity

	* Matthew Martin: 42604: Completion/BSD/Command/_signify,
	Completion/BSD/Command/_vmctl: new completions for OpenBSD's
	signify and vmctl

	* github #24: Klas Mellbourn: Completion/X/Command/_code:
	Add completion script for Visual Studio Code

2018-04-06  Mikael Magnusson  <mikachu@gmail.com>

	* 42602: Completion/Unix/Command/_gcc: Update _gcc as of GCC
	7.3.0 for generic options and x86

2018-04-05  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* 42591: Completion/Debian/Command/_apt: complete *.changes and
	*.dsc files alongside *.deb

	* 42584: Completion/Unix/Command/_ssh: complete options for
	ssh-keyscan and update options for ssh-copy-id

	* 42583: Completion/Unix/Command/_column: new column completion

	* 42582: Completion/BSD/Command/_cu, Completion/Unix/Command/_uniq,
	Completion/Unix/Command/_dhclient, Completion/Unix/Command/_script:
	updates to options in completions for OpenBSD 6.3

	* 42575: Src/Zle/computil.c, Test/Y03arguments.ztst: fix to not
	complete options in the argument to another option

2018-04-05  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 42590: Completion/Unix/Command/_fmt: fix detection of OSTYPE

	* 42585 (cf. 42574: Eitan Adler): Completion/Unix/Command/_tar,
	Completion/Unix/Type/_tar_archive: complete all compressed
	archives when libarchive-based tar is being used without
	compression flag

	* 42577: Completion/Unix/Command/_strings: fix macOS support

	* 42578: Completion/Unix/Command/_shutdown: add support for macOS

2018-04-04  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: 5.4.2-test-2.

	* 42581(?): Src/hist.c, Src/lex.c, Test/X03zlebindkey.ztst: history
	expansion within ZLE needs history to be read to conclusion on
	error.
